Fix display favorite list on mobile

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -556,6 +556,8 @@ body {
         margin: auto;
         .actions-btn {
             border-radius: 10px 10px 0px 0px;
+            position: relative;
+            z-index: 1;
             p {
                 &:first-child {
 
@@ -568,7 +570,11 @@ body {
             }
         }
         .content-list {
-            margin-top: -130px;
+            position: absolute;
+            bottom: 10px;
+            ul {
+                padding: 20px 10px 30px;
+            }
         }
     }
 }
